crates/store_app/re_tf/src/snapshots/re_tf__transform_forest__tests__simple_entity_hierarchy__transform_from_to__top_pinhole_child2d.snap
---
source: crates/store_app/re_tf/src/transform_forest.rs
expression: "pretty_print_transform_frame_ids_in(&result, &transform_cache)"
---
[
    (
        tf#/,
        Ok(
            TreeTransform {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            0.002,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.004,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.003,
                        ),
                    },
                    translation: DVec3(
                        47.998,
                        99.996,
                        -1.5,
                    ),
                },
            },
        ),
    ),
    (
        tf#/top,
        Ok(
            TreeTransform {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            0.002,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.004,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.003,
                        ),
                    },
                    translation: DVec3(
                        48.0,
                        99.996,
                        -1.5,
                    ),
                },
            },
        ),
    ),
    (
        tf#/top/pinhole,
        Ok(
            TreeTransform {
                root: tf#/top/pinhole,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            1.0,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                    translation: DVec3(
                        -2.0,
                        0.0,
                        0.0,
                    ),
                },
            },
        ),
    ),
    (
        tf#/top/child3d,
        Ok(
            TreeTransform {
                root: tf#/,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            0.002,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            0.004,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            0.003,
                        ),
                    },
                    translation: DVec3(
                        48.0,
                        99.996,
                        -1.497,
                    ),
                },
            },
        ),
    ),
    (
        TransformFrameIdHash(D01893A02DC02A5F),
        Err(
            UnknownSourceFrame(
                TransformFrameIdHash(D01893A02DC02A5F),
            ),
        ),
    ),
    (
        tf#/top/pinhole/child2d,
        Ok(
            TreeTransform {
                root: tf#/top/pinhole,
                target_from_source: DAffine3 {
                    matrix3: DMat3 {
                        x_axis: DVec3(
                            1.0,
                            0.0,
                            0.0,
                        ),
                        y_axis: DVec3(
                            0.0,
                            1.0,
                            0.0,
                        ),
                        z_axis: DVec3(
                            0.0,
                            0.0,
                            1.0,
                        ),
                    },
                    translation: DVec3(
                        0.0,
                        0.0,
                        0.0,
                    ),
                },
            },
        ),
    ),
    (
        tf#/top/pure_leaf_pinhole,
        Err(
            NoPathBetweenFrames {
                target: tf#/top/pinhole/child2d,
                src: tf#/top/pure_leaf_pinhole,
                target_root: tf#/top/pinhole,
                source_root: tf#/top/pure_leaf_pinhole,
            },
        ),
    ),
]
